@@ -1,10 +1,11 @@
 package org.test.sotfgen.security;
 
-import jakarta.servlet.http.HttpServletRequest;
-import org.jetbrains.annotations.NotNull;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -16,20 +17,24 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.test.sotfgen.security.filter.AuthoritiesLoggingAfterFilter;
-import org.test.sotfgen.security.filter.JWTTokenGeneratorFilter;
 import org.test.sotfgen.security.filter.JWTTokenValidatorFilter;
 
 import java.util.Collections;
 import java.util.List;
 
-import static org.springframework.security.config.Customizer.withDefaults;
-
 @Configuration
 @Profile("!prod")
+@RequiredArgsConstructor
 @EnableMethodSecurity
 public class SecurityConfig {
+
+    @Value("${jwt.secret.key}")
+    private String jwtSecretKey;
+    @Value("${jwt.header}")
+    private String jwtHeader;
+
+    private final RedisTemplate<String,String> redisTemplate;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -38,39 +43,49 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationManager authenticationManager(CustomUserDetailsService userDetailsService, PasswordEncoder passwordEncoder) {
-        BasicAuthenticationProviderProd authenticationProvider =
-                new BasicAuthenticationProviderProd(userDetailsService, passwordEncoder);
+        CustomAuthenticationProvider authenticationProvider =
+                new CustomAuthenticationProvider(userDetailsService, passwordEncoder);
         ProviderManager provideManager = new ProviderManager(authenticationProvider);
         provideManager.setEraseCredentialsAfterAuthentication(false);
         return provideManager;
     }
 
     @Bean
+    //Filter
+    public JWTTokenValidatorFilter jwtTokenValidatorFilter(RedisTemplate<String,String> redisTemplate) {
+        return new JWTTokenValidatorFilter(jwtSecretKey, jwtHeader, redisTemplate);
+    }
+
+    @Bean
+    //Filter
+    public AuthoritiesLoggingAfterFilter authoritiesLoggingAfterFilter() {
+        return new AuthoritiesLoggingAfterFilter();
+    }
+
+    @Bean
     public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception{
         http.sessionManagement(sessionConfig -> sessionConfig.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .cors(corsConfig -> corsConfig.configurationSource(new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration(@NotNull HttpServletRequest request) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Collections.singletonList("http://localhost:8080"));
-                        config.setAllowedMethods(Collections.singletonList("*"));
-                        config.setAllowCredentials(true);
-                        config.setAllowedHeaders(Collections.singletonList("*"));
-                        config.setExposedHeaders(List.of("Authorization"));
-                        config.setMaxAge(3600L);
-                        return config;
-                    }
+                .cors(corsConfig -> corsConfig.configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("http://localhost:8080"));
+                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setExposedHeaders(List.of("Authorization"));
+                    config.setMaxAge(3600L);
+                    return config;
                 }))
-                .requiresChannel(rcc -> rcc.anyRequest().requiresInsecure()) // HTTP
-                .csrf(AbstractHttpConfigurer::disable) // Replacing deprecated `csrf().disable()`
-                .addFilterAfter(new AuthoritiesLoggingAfterFilter(), BasicAuthenticationFilter.class)
-                .addFilterAfter(new JWTTokenGeneratorFilter(), BasicAuthenticationFilter.class)
-                .addFilterBefore(new JWTTokenValidatorFilter(), BasicAuthenticationFilter.class)
+                .formLogin(AbstractHttpConfigurer::disable)
+                .httpBasic(AbstractHttpConfigurer::disable)
+                .logout(AbstractHttpConfigurer::disable)
+                .requiresChannel(rcc -> rcc.anyRequest().requiresInsecure()) // HTTP request
+                .csrf(AbstractHttpConfigurer::disable)
+                .addFilterAfter(authoritiesLoggingAfterFilter(), BasicAuthenticationFilter.class)
+                .addFilterBefore(jwtTokenValidatorFilter(redisTemplate), BasicAuthenticationFilter.class)
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/swagger-ui/**").hasRole("ADMIN")
+                        .requestMatchers("/login", "/swagger-ui/**").permitAll()
                         .anyRequest().authenticated()
-                )
-                .httpBasic(withDefaults());
+                );
         return http.build();
     }
 }
